# QuickTradeApp

./: .gitignore  CLAUDE.md  README.md  build_exe.py  client_config.json  config.json  feature_toggle_spike.md  main.py  pyproject.toml  run.py  run_client.py  run_server.py
app/: config.py
app/api/: auth.py  schemas.py  server.py
app/core/: sl_calculator.py  sync.py
app/models/: trade.py
app/mt5/: __init__.py  connection.py  mock.py  positions.py  trading.py  worker.py
app/ui/: main_window.py  order_panel.py  positions_panel.py  status_bar.py
client_app/: api_client.py  config.py  worker.py
client_app/ui/: main_window.py  order_panel.py  positions_panel.py  status_bar.py
