[project]
name = "tradingapp"
version = "0.1.0"
description = "MT5 Quick Trading App - Python GUI for MetaTrader 5"
requires-python = ">=3.11"
dependencies = [
    "PyQt6>=6.6",
    "MetaTrader5>=5.0.45; sys_platform == 'win32'",
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "requests>=2.32",
]

[project.optional-dependencies]
build = ["pyinstaller>=6.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project.scripts]
tradingapp = "run:main"
